develop
=======

* Move burpui agent modules to another role

=======
v1.30.2
=======

* fix on autoupgrade script

v1.30.1
=======

* fix on metadata for ansible galaxy

v1.30
=====

* Upgrade burpui-agent to v0.6.1 https://github.com/CoffeeITWorks/ansible_burp2_server/issues/28
* Add compile optimizations. 
Now this role compiles with some better configurations for performance improvements, you can also change the variable `burp_configure_line` with your own configure flags too.
See https://github.com/CoffeeITWorks/ansible_burp2_server/issues/24.
* Add backup script tool from @deajan
backup_script_tool is added as optional installation, you can use var `install_backup_tool_script: true` to install, see defaults/main.yml vars for more options.
https://github.com/CoffeeITWorks/ansible_burp2_server/issues/26

* Add more help for newcomers and developers of ansible role https://github.com/CoffeeITWorks/ansible_burp2_server/issues/6

See https://github.com/CoffeeITWorks/ansible_burp2_server#Developers

Also for newusers: https://github.com/CoffeeITWorks/ansible_burp2_server#quickstart

v1.12
=======

* added more windows exclusions by @deajan on github. Thanks!
* default to burp 2.1.32 as it is the current stable

v1.11
=======

* updated lnxsrv_global_exclusions
* Update default burp to 2.1.28 (current stable)
* Migrate molecule tests to molecule v2 closes #18
* fix #19 fixes testing for fedora on molecule


v1.10
=====

* #16 Install python3 to centos or Redhat when using pip3 as executable for burpui-agent (default)
* Added fedora tests with molecule
* Install cron/cronie if it is not installed
* use crond as service name when it is on Redhat based systemd
* #15 change defaults based on https://github.com/grke/burp/wiki/Performance-Tips
* burp_manual_delete_enabled: true by default based on #15 (saves lot of time for phase4 on big backups or when having hundred of services)

v1.9.3
======
